--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,10 @@
     <style>
         a { cursor: pointer; }
     </style>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="mat-typography">
     <app>Loading...</app>
 </body>
 </html>
